public/src/css/styles.css
html {
    position: relative;
    min-height: 100%;
}

body {
    padding-top: 70px;
    /* Margin bottom by footer height */
    margin-bottom: 60px;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 60px;
    background-color: #f5f5f5;
}

.footer .container {
    width: auto;
    max-width: 680px;
    padding: 0 15px;
}

.footer .container .text-muted {
    margin: 20px 0;
}

.req:after {
    color: #e32;
    content: ' *';
    display: inline;
}

.ng-dirty.ng-invalid.form-control {
    border-color: #a94442;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
}

.ng-dirty.ng-invalid.form-control:focus {
    border-color: #843534;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
}

.ng-dirty.ng-invalid + .input-group-addon {
    color: #a94442;
    background-color: #f2dede;
    border-color: #a94442;
}

input[type=checkbox].ng-invalid {
    outline: 1px solid #a94442;
    outline-offset: -1px;
}

